--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <h1 class="title">TODO LIST</h1>
-        <section class="search">
+        <form class="search">
             <input class="search_input" placeholder="Введите новую задачу..."></input>
-            <button class="search_add">Добавить</button>
-        </section>
+            <button class="search_add" type="button">Добавить</button>
+        </form>
     </header>
 
     <main class="main">
@@ -22,5 +22,9 @@
             <!-- отображение созданных задач -->
         </ul>
     </main>
+
+    <footer>
+        <p class="copyright" >© 2025</p>
+    </footer>
 </body>
 </html>
