--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1 class="title">TODO LIST</h1>
         <form class="search">
-            <input class="search_input" placeholder="Введите новую задачу..."></input>
+            <input class="search_input" placeholder="Введите новую задачу..."/>
             <button class="search_add" type="button">Добавить</button>
         </form>
     </header>
